<resources>
    <string name="Ap">Portable hotspot</string>
    <string name="ApOff">OFF</string>
    <string name="ApOn">ON</string>
    <string name="DHCP_setting">DHCP</string>
    <string name="DTSSettingStatus">CLOSE</string>
    <string name="DTS_setting">DTS Settings</string>
    <string name="DTS_setting_title">Device hasn`t support the DTS !</string>
    <string name="DolbySettingStatus">CLOSE</string>
    <string name="Dolby_setting_title">Device hasn`t support the Dolby !</string>
    <string name="ISablespace">Available</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="NandFlash">ROM</string>
    <string name="Nandablespace">Available</string>
    <string name="Nandallspace">Nand all space</string>
    <string name="PressVioceStatus_close">CLOSE</string>
    <string name="PressVioceStatus_open">OPEN</string>
    <string name="Resolution">Resolution</string>
    <string name="SDablespace">Available</string>
    <string name="SDallspace">Total Space</string>
    <string name="SDstore">SD Card</string>
    <string name="StatiIP_setting">Static IP</string>
    <string name="TV_mode">mode</string>
    <string name="a_more_settings">More Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_settings">About phone</string>
    <string name="about_settings_summary">View legal info, status, software version</string>
    <string name="about_us">About Us</string>
    <string name="accelerometer_summary_off">Switch orientation automatically when rotating phone</string>
    <string name="accelerometer_summary_on">Switch orientation automatically when rotating phone</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_long_press_timeout_title">Touch &amp; hold delay</string>
    <string name="accessibility_menu_item_settings">Settings</string>
    <string name="accessibility_menu_item_tutorial">Tutorial</string>
    <string name="accessibility_no_services_installed">No services installed</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_power_button_ends_call_title">Power button ends call</string>
    <string name="accessibility_script_injection_allowed">Allowed</string>
    <string name="accessibility_script_injection_button_allow">Allow</string>
    <string name="accessibility_script_injection_button_disallow">Don\'t allow</string>
    <string name="accessibility_script_injection_disallowed">Not allowed</string>
    <string name="accessibility_script_injection_security_warning_summary">Do you want apps to install scripts from Google that make their web content more accessible?</string>
    <string name="accessibility_script_injection_security_warning_title">Install web scripts?</string>
    <string name="accessibility_script_injection_title">Install web scripts</string>
    <string name="accessibility_service_default_description">No description provided.</string>
    <string name="accessibility_service_disable_warning_summary">Touching OK will stop %1$s.</string>
    <string name="accessibility_service_disable_warning_title">Stop %1$s?</string>
    <string name="accessibility_service_no_apps_message">TalkBack provides spoken feedback to help blind and low-vision users. Do you want to install it for free from Android Market?</string>
    <string name="accessibility_service_no_apps_title">Need a screen reader?</string>
    <string name="accessibility_service_security_warning_summary">%1$s can collect all of the text you type, except passwords. This includes personal data such as credit card numbers. It can also collect data about your interactions with the phone.</string>
    <string name="accessibility_service_security_warning_title">Use %1$s?</string>
    <string name="accessibility_service_state_off">OFF</string>
    <string name="accessibility_service_state_on">ON</string>
    <string name="accessibility_services_title">Services</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="accessibility_settings_title">Accessibility settings</string>
    <string name="accessibility_speak_password_title">Speak passwords</string>
    <string name="accessibility_sync_disabled">Sync disabled</string>
    <string name="accessibility_sync_enabled">Sync enabled</string>
    <string name="accessibility_sync_error">Sync error.</string>
    <string name="accessibility_system_title">System</string>
    <string name="accessibility_toggle_large_text_title">Large text</string>
    <string name="accessibility_touch_exploration_summary">When Explore by Touch is turned on, you can hear or see descriptions of what\'s under your finger.\n\n This feature is for low-vision users.</string>
    <string name="accessibility_touch_exploration_title">Explore by touch</string>
    <string name="accessibility_touch_exploration_warning">This feature changes the way your device responds to touch. Turn on?</string>
    <string name="accessibility_tutorial_back">Back</string>
    <string name="accessibility_tutorial_finish">Finish</string>
    <string name="accessibility_tutorial_lesson_1_text_1">After you turn on Explore by Touch, you can touch the screen to learn what’s under your finger. For example, the current screen contains app icons. Find one of them by touching the screen and sliding your finger around.</string>
    <string name="accessibility_tutorial_lesson_1_text_2_more">Good. Keep sliding your finger around the screen until you find at least one more icon.</string>
    <string name="accessibility_tutorial_lesson_1_text_3">To activate something that you’re touching, tap it. Slide your finger until you find the icon for the %s. Then tap the icon once to activate it.</string>
    <string name="accessibility_tutorial_lesson_1_text_4">Your finger is touching the %s icon. Tap once to activate the icon.</string>
    <string name="accessibility_tutorial_lesson_1_text_4_exited">Your finger moved over the %s icon, and then moved away. Slowly slide your finger around the screen until you find the Browser icon again.</string>
    <string name="accessibility_tutorial_lesson_1_text_5">Good. To move to the next lesson, find and activate the %s button, located near the bottom-right corner of the screen.</string>
    <string name="accessibility_tutorial_lesson_1_title">Lesson 1: Exploring the screen</string>
    <string name="accessibility_tutorial_lesson_2_text_1">To scroll through a list, you can slide two fingers along the screen. For example, the current screen contains a list of app names that can scroll up or down. First, try to identify a few items in the list by sliding one finger around.</string>
    <string name="accessibility_tutorial_lesson_2_text_2_more">Good. Keep sliding your finger around to find at least one more item.</string>
    <string name="accessibility_tutorial_lesson_2_text_3">Now place two fingers on an item in the list and slide both fingers up. If you reach the top of the screen, lift your fingers, place them lower on the list, and continue sliding up.</string>
    <string name="accessibility_tutorial_lesson_2_text_3_more">Good. Keep sliding your fingers up to scroll some more.</string>
    <string name="accessibility_tutorial_lesson_2_text_4">You have completed the tutorial. To exit, find and touch the %s button.</string>
    <string name="accessibility_tutorial_lesson_2_title">Lesson 2: Scrolling using two fingers</string>
    <string name="accessibility_tutorial_next">Next</string>
    <string name="accessibility_tutorial_skip">Skip tutorial</string>
    <string name="accessibility_tutorial_title">Accessibility tutorial</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="account_sync_settings_title">Sync settings</string>
    <string name="android_d">Android</string>
    <string name="app_name">Settings</string>
    <string name="application_manage">Manage applications</string>
    <string name="credentials_password_too_short">The password must have at least 8 characters.</string>
    <string name="dl_sui">下载随心控</string>
    <string name="dlna_name">rockchip</string>
    <string name="factoryreset">Factory Reset</string>
    <string name="factoryresetcancel">cancel</string>
    <string name="factoryresetsure">sure</string>
    <string name="factoryresettip">After restoring the factory settings, some of your settings will be restored to the default values. Are you sure you want to restore？</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="ios_d">iOS</string>
    <string name="no1">1.扫描</string>
    <string name="no2">2.体验</string>
    <string name="no_applications">No apps.</string>
    <string name="notic1">建议使用腾讯QQ，UC，二维码管家等软件扫描下载，暂不支持“微信”扫描</string>
    <string name="notic2">欢迎体验随心控，请确保手机跟机顶盒在同一局域网</string>
    <string name="person_name">Personal Setting</string>
    <string name="settings_safetylegal_activity_loading">Loading…</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_security">Security:</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_ssid">SSID:</string>
</resources>