<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/type"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wifi_ssid"
                style="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="32"
                android:inputType="textNoSuggestions"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wifi_security"
                style="?android:attr/textAppearanceSmall"/>
            <Spinner
                android:entries="@array/wifi_ap_security"
                android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/wifi_security"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/fields"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wifi_password"
                style="?android:attr/textAppearanceSmall"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:maxLength="63"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/credentials_password_too_short"
                style="?android:attr/textAppearanceSmall"/>
            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_show_password"
                style="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
