<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/setting_content_padlr"
    android:paddingTop="@dimen/setting_content_padtb"
    android:paddingRight="@dimen/setting_content_padlr"
    android:paddingBottom="@dimen/setting_content_padtb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/title"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/setting_title_size"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:id="@+id/app_text"
            android:paddingLeft="@dimen/viewpager_left"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/viewpager_icon_h"
            android:text="@string/app_name"
            android:drawableLeft="@drawable/settings_icon"/>
        <ImageView
            android:id="@+id/title_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_right"/>
        <TextView
            android:textSize="@dimen/setting_title_size"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"/>
    </LinearLayout>
    <TextView
        android:background="@drawable/settings_head_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
        <Button
            android:textSize="30dp"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:id="@+id/dlna_name"
            android:background="@drawable/button"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dlna_name"
            android:drawableTop="@drawable/dlna_icon"
            android:layout_weight="1.8"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.8">
                <TextView
                    android:textSize="25dp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dl_sui"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="25dp"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/android_d"/>
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="121dp"
                        android:layout_height="121dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/suixinkong2"
                        android:scaleType="fitXY"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="25dp"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ios_d"/>
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="121dp"
                        android:layout_height="121dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ios_suixinkong"
                        android:scaleType="fitXY"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4.1">
                <TextView
                    android:textSize="22dp"
                    android:textColor="#ffffff"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no1"/>
                <TextView
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notic1"/>
                <TextView
                    android:textSize="22dp"
                    android:textColor="#ffffff"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no2"/>
                <TextView
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notic2"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>
</LinearLayout>
