<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/setting_content_padlr"
    android:paddingTop="@dimen/setting_content_padtb"
    android:paddingRight="@dimen/setting_content_padlr"
    android:paddingBottom="@dimen/setting_content_padtb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/title"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_vertical"
            android:id="@+id/app_text"
            android:paddingLeft="@dimen/viewpager_left"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/viewpager_icon_h"
            android:text="@string/app_name"
            android:drawableLeft="@drawable/settings_icon"/>
        <ImageView
            android:id="@+id/title_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_right"/>
        <TextView
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factoryreset"/>
    </LinearLayout>
    <TextView
        android:id="@+id/settings_line"
        android:background="@drawable/settings_head_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="2.05">
        <TextView
            android:textSize="37sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/factoryresettip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factoryresettip"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.95">
        <Button
            android:textSize="40sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/resetsure"
            android:background="@drawable/button_choose"
            android:focusable="true"
            android:nextFocusUp="@+id/resetcancel"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/factoryresetsure"
            android:onClick="onClick"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="0dp"/>
        <Button
            android:textSize="40sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/resetcancel"
            android:background="@drawable/button_choose"
            android:focusable="true"
            android:nextFocusDown="@+id/resetsure"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/factoryresetcancel"
            android:onClick="onClick">
            <requestFocus/>
        </Button>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>
</LinearLayout>
