<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/setting_content_padlr"
    android:paddingTop="@dimen/setting_content_padtb"
    android:paddingRight="@dimen/setting_content_padlr"
    android:paddingBottom="@dimen/setting_content_padtb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/title"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_vertical"
            android:id="@+id/app_text"
            android:paddingLeft="@dimen/viewpager_left"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/viewpager_icon_h"
            android:text="@string/app_name"
            android:drawableLeft="@drawable/settings_icon"/>
        <ImageView
            android:id="@+id/title_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_right"/>
        <TextView
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_manage"/>
    </LinearLayout>
    <TextView
        android:id="@+id/settings_line"
        android:background="@drawable/settings_head_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/list_container"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1">
                <ListView
                    android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:listSelector="@drawable/listview_selector_wifi"
                    android:drawSelectorOnTop="false"
                    android:cacheColorHint="#00000000"
                    android:divider="@drawable/setting_listview_split"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    android:id="@android:id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no_applications"/>
            </FrameLayout>
            <view
                android:orientation="horizontal"
                android:id="@+id/storage_color_bar"
                android:paddingLeft="4dp"
                android:paddingTop="30dp"
                android:paddingRight="4dp"
                android:paddingBottom="1dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                class="com.rk_itvui.settings.dialog.LinearColorBar">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:textColor="#000"
                    android:id="@+id/usedStorageText"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="1"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:textStyle="bold"
                    android:textColor="#ccc"
                    android:id="@+id/storageChartLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:text="@string/internal_storage"
                    android:singleLine="true"
                    android:shadowColor="#000"
                    android:shadowRadius="5"
                    android:layout_weight="0"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:textColor="#000"
                    android:gravity="right"
                    android:layout_gravity="center"
                    android:id="@+id/freeStorageText"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="1"/>
            </view>
        </LinearLayout>
        <view
            android:id="@+id/running_processes"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.rk_itvui.settings.dialog.RunningProcessesView"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/loading_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_safetylegal_activity_loading"
                android:singleLine="true"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
